src/test/ui/issues/issue-62480.stderr
error: `break` to unknown label
  --> $DIR/issue-62480.rs:8:12
   |
LL |         || break 'a
   |            ^^^^^^^^

error: aborting due to previous error

